--- a/Taigi.html
+++ b/Taigi.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>台語文版 搶救瀕臨滅絕的本土語言：探討台語文的現況與未來發展</title>
+	<title>台語文版 搶救瀕臨滅絕的本土語言：探討台語文的歷史、現況與未來發展</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="A study of Taiwan Taigi，台語文探討">
 	<meta name="keywords" content="台語, 臺灣台語，臺灣閩南語，閩南語，中華民國語言，臺灣語言，語言, 本土語言">
