--- a/Mandarin.html
+++ b/Mandarin.html
@@ -73,7 +73,7 @@
 	<ol style="list-style: none">
 		<li style="font-size:23px"><b><br>語言傳承大斷層</b></li>
 		<p style="font-size:21px">
-		　　因今日南部或長一輩的人們多半使用台語溝通，致使大眾未意識台語的消逝危機，誤認台語猶屬我國強勢語言。而從誤解台語復興不被重視，甚至遭嗤之以鼻。又受政治社會影響，不會說台語抑或台語不流利的年輕世代不敢講台語，也多半不願付出時間學習台語；會講台語的人們沒有能夠自在使用台語的環境，甚至不敢於公共場合使用。使得流利台語使用者平均年齡逐年遞增，自此可預見數十年後台語將不再被新世代所接受與使用。
+		　　因今日南部或長一輩的人們多半使用台語溝通，致使大眾未意識台語的消逝危機，誤認台語猶屬我國強勢語言，而從誤解台語復興不被重視，甚至遭嗤之以鼻。又受政治社會影響，不會說台語抑或台語不流利的年輕世代不敢講台語，也多半不願付出時間學習台語；會講台語的人們沒有能夠自在使用台語的環境，甚至不敢於公共場合使用。使得流利台語使用者平均年齡逐年遞增，自此可預見數十年後台語將不再被新世代所接受與使用。
 		</p>
 	</ol>
 
