--- a/Taigi.html
+++ b/Taigi.html
@@ -175,7 +175,7 @@
 </ol>	
 <hr>
 <a href="#first">回到標題</a>
-<p>這個網頁以台語文書寫，另有華語文版網頁可進入後列網頁進行參考：<a href="Mardarin.html" target="_blank">華語文版網頁</a></p>
+<p>這個網頁以台語文書寫，另有華語文版網頁可進入後列網頁進行參考：<a href="Mandarin.html" target="_blank">華語文版網頁</a></p>
 <p>本文台語文漢字依<a href="https://sutian.moe.edu.tw/zh-hant/" target="_blank">教育部臺灣台語常用詞辭典</a>之推薦漢字為主</p>
 
 	<p>閣較濟推薦的內容：教育部114年3月<a href="https://blgjts.moe.edu.tw/tmt/index.php" target="_blank">臺灣台語語言能力認證考試</a>現此時開始報名
