--- a/Taigi.html
+++ b/Taigi.html
@@ -34,7 +34,7 @@
 
 <li style="font-size:25px"><b><br>貳、戰後臺灣的語言政策</b></li>
 	<p style="font-size:21px">
-		　　二戰末期戰況漸趨明朗，國民政府相繼成立為做接受臺灣前置預備作業的「臺灣調查委員會」以及為除日本化與擴大國語影響力的「國語推行委員會」，舉辦全省國語文競賽，以培養臺灣人民對國語文的能力。但除因先前被日人殖民時推動皇民化運動之國語政策，造成本土語文存活空間逐漸限縮外，而後又因國民政府國語運動的成功且澈底地推行，大幅降低臺灣民眾使用母語的意願與環境，甚至禁止使用方言。這也影響當時人們普遍認為華語高於母語一等，使得今日老一輩的人們傾向選擇使用較不標準的華語，而非慣用母語與孩子溝通，惡性循環下亦使得新世代喪失母語能力。
+		　　二戰末期戰況漸趨明朗，國民政府相繼成立為做接臺灣前置預備作業的「臺灣調查委員會」以及為除日本化與擴大國語影響力的「國語推行委員會」，舉辦全省國語文競賽，以培養臺灣人民對國語文的能力。但除因先前被日人殖民時推動皇民化運動之國語政策，造成本土語文存活空間逐漸限縮外，而後又因國民政府國語運動的成功且澈底地推行，大幅降低臺灣民眾使用母語的意願與環境，甚至禁止使用方言。這也影響當時人們普遍認為華語高於母語一等，使得今日老一輩的人們傾向選擇使用較不標準的華語，而非慣用母語與孩子溝通，惡性循環下亦使得新世代喪失母語能力。
 	</p>
 
 <li style="font-size:25px"><b>叁、台語的認同與大眾觀感</b></li>
@@ -74,7 +74,7 @@
 	<ol style="list-style: none">
 		<li style="font-size:23px"><b><br>語言傳承大斷層</b></li>
 		<p style="font-size:21px">
-		　　因今日南部或長一輩的人們多半使用台語溝通，致使大眾未意識台語的消逝危機，誤認台語猶屬我國強勢語言。而從誤解台語復興不被重視，甚至遭嗤之以鼻。又受政治社會影響，不會說台語抑或台語不流利的年輕世代不敢講台語，也多半不願付出時間學習台語；會講台語的人們沒有能夠自在使用台語的環境，甚至不敢於公共場合使用。使得流利台語使用者平均年齡逐年遞增，自此可預見數十年後台語將不再被新世代所接受與使用。
+		　　因今日南部或長一輩的人們多半使用台語溝通，致使大眾未意識台語的消逝危機，誤認台語猶屬我國強勢語言，S而從誤解台語復興不被重視，甚至遭嗤之以鼻。又受政治社會影響，不會說台語抑或台語不流利的年輕世代不敢講台語，也多半不願付出時間學習台語；會講台語的人們沒有能夠自在使用台語的環境，甚至不敢於公共場合使用。使得流利台語使用者平均年齡逐年遞增，自此可預見數十年後台語將不再被新世代所接受與使用。
 		</p>
 	</ol>
 
